--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -60,6 +60,8 @@
             </div>
         {% endif %}
 </main>
+
+<aside class="search-section"></aside>
 {% endblock %}
 
 <!-- Javascript code integration -->
