--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -122,7 +122,7 @@
             {% block comments %} {% endblock %}
         </div>
     </main>
-    <aside id="search-section">
+    <aside class="search-section">
         <!-- <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque quaerat molestiae. Doloremque exercitationem iure, debitis vero eaque earum vitae.</h1>
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque quaerat molestiae. Doloremque exercitationem iure, debitis vero eaque earum vitae.</h1>
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque quaerat molestiae. Doloremque exercitationem iure, debitis vero eaque earum vitae.</h1> -->
