--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
         
         {% block content %}
         {% endblock %}
+
+        {% include "left_sidebar.html" %}
     </div>
     <!-- JS content -->
     {% block javascript %}
