--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -127,7 +127,7 @@
 
 <!-- Javascript code integration -->
 {% block javascript %}
-    <script src="{% static 'js/UIControl.js' %}"></script>
+    <script src="{% static 'js/UIControl.js' %}" type="module"></script>
     <script src="{% static 'js/modalCtrl.js' %}"></script>
     <script src="{% static 'js/dataCtrl.js' %}" type="module"></script>
 {% endblock %}
