--- a/templates/left_sidebar.html
+++ b/templates/left_sidebar.html
@@ -1,13 +1,30 @@
 {% load static %}
 
 <aside class="search-section">
+  <div class="posts-header" style="border:none">
     <div class="search-field">
         <i class="fas fa-search"></i>
         <input type="search" placeholder="Search Twitter" class="search-input">
         <ul class="results">
           <p>Try searching for people.</p>
         </ul>
+    </div>
+  </div>
+  {% if unfollowed_users %}
+  <div class="card">
+    <h3 class="text-middle clear mt-1 ml-1 mb-1">You might like</h3>
+    {% for user in unfollowed_users %}
+      <div class="card-content" data-profile="{{ user.id }}">
+        <img src="{{ user.profile_pic.url }}" alt="Not found">
+        <div style="justify-self: left"> 
+          <a href="{{ user.get_absolute_url }}" class="profile-link">{{ user }}</a>
+          <p>@{{ user.user.username }}</p>
+        </div>
+        <a href="#" class="btn btn-login-secondary btn-follow top mt-1" id="btn-follow">Follow</a>
       </div>
+    {% endfor %}
+  </div>
+  {% endif %}
 </aside>
 
 <script src="{% static 'js/searchCtrl.js' %}" type="module" defer></script>
