--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -9,7 +9,7 @@
         <p class="text-middle clear mt-1 ml-1">Home</p>
     </div>
     <!-- Form to create new Post/Tweet -->
-    <form method="POST" class="form login-form">
+    <form method="POST" class="form login-form" id="post-form">
         {% csrf_token %}
         <div class="post-container">
             <div class="user-photo"><a href="{{ user.profile_pic.url }}"></a><img src="{{ user.profile_pic.url }}" alt="Not found"></a></div>
@@ -53,6 +53,9 @@
                 </div>
             </div>
             {% endfor %}
+            <!-- <div class="loader">
+                <i class="fab fa-twitter fa-2x">
+            </div> -->
         {% else %}
             <div class="grid-center mt-1" style="border: 1px solid var(--border-color);">
                 <h3 class="text-middle clear mt-1 mb-1">Share your first tweet with us and start following somebody.</h3>
@@ -64,6 +67,6 @@
 
 <!-- Javascript code integration -->
 {% block javascript %}
-    <script src="{% static 'js/UIControl.js' %}"></script>
+    <script src="{% static 'js/UIControl.js' %}" type="module"></script>
     <script src="{% static 'js/dataCtrl.js' %}" type="module"></script>
 {% endblock %}
