--- a/static/css/style.css
+++ b/static/css/style.css
@@ -344,7 +344,7 @@ body {
     transition: 0.3s;
 }
 
-.post-card .post-title i {
+.post-card .post-title i{
     position: absolute;
     top: -5px;
     right: -20px;
@@ -464,6 +464,34 @@ body {
 
 .posts-header .social-icon:hover {
     background-color: rgb(29, 161, 242, 0.2);
+}
+
+.delete-post {
+    height: 30px;
+    text-decoration: none !important;
+    background-color: var(--search-color);
+    padding: 10px 15px;
+    color: var(--border-color) !important;
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    font-size: 0.9rem;
+    line-height: 0.7rem;
+    border-radius: 5px;
+    visibility: hidden;
+    z-index: 10;
+    box-shadow: 0px 0px 4px 0px #ffffff;
+    transition: 0.2s ease;
+    pointer-events: none;
+}
+
+.delete-post:hover {
+    background-color: var(--secondary-color);
+}
+
+.delete-post.show {
+    visibility: visible;
+    pointer-events: auto;
 }
 
 /* Comments */
@@ -632,7 +660,6 @@ body {
 
 .result-container {
     padding: 10px 5px;
-    display: block;
 }
 
 .result-container:hover {
