--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -32,6 +32,7 @@
                 <div class="user-photo"><a href="{{ post.owner.profile_pic.url }}"></a><img src="{{ post.owner.profile_pic.url }}" alt="Not found"></a></div>
                 <div class="post-card">
                     <div class="post-title"><a href="{{post.owner.get_absolute_url}}"><strong>{{ post.owner }}</strong></a><span> @{{post.username}} · {{ post.created_on|date:"M j, Y" }}<i class="fas fa-ellipsis-h flex-row"></i></span>
+                        {% if post.owner.id == user.id %}<a href="{% url 'posts:delete-post' post.id %}" class="delete-post">Delete post ?</a>{% endif %}
                     </div>
                     {% if post.title != "0" %}
                         <div class="post-title mt-1">{{ post.title }}</div>
