--- a/static/css/style.css
+++ b/static/css/style.css
@@ -755,12 +755,37 @@ body {
     text-align: left;
 }
 
+/* Loader animation */
+#loader.inactive {
+    visibility: hidden;
+}
+
+#loader {
+    transition: 0.2s ease;
+    visibility: visible;
+}
+
+#loader i{
+    color: var(--primary-color);
+    animation: load 1s linear infinite;
+}
+
+@keyframes load {
+    from {
+        transform: scale(0);
+        opacity: 1;
+    }
+    to {
+        transform: scale(1);
+        opacity: 0;
+    }
+}
+
 /* Modals */
 #myModal {
     position: absolute;
     width: 100%;
     height: 100%;
-    /* top:0; */
     left: 0;
     background-color: rgba(78, 166, 221, 0.7);
     z-index: 100;
@@ -777,9 +802,7 @@ body {
 
 #myModal .modalCard {
     width: 45%;
-    /* background-color: rgb(46, 168, 243); */
     background-color: var(--secondary-color);
-    /* box-shadow: 0px 4px 8px 2px rgba(46, 168, 243, 0.7); */
     max-height: 650px;
     z-index: 110;
     text-align: center;
