--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -63,6 +63,8 @@
                 <a href="#" class="btn btn-login-secondary btn-inline">Tweet</a>
             </div>
         {% endif %}
+    </div>
+    <div id="loader" class="grid-center mt-1 inactive"><i class="fab fa-twitter fa-2x"></i></div>
 </main>
 {% endblock %}
 
