--- a/static/css/style.css
+++ b/static/css/style.css
@@ -762,7 +762,7 @@ body {
     height: 100%;
     /* top:0; */
     left: 0;
-    background-color: rgba(78, 166, 221, 0.7);
+    background-color: rgba(110, 119, 134, 0.7);
     z-index: 100;
     overflow-y: hidden;
     opacity: 1;
@@ -777,21 +777,25 @@ body {
 
 #myModal .modalCard {
     width: 45%;
-    /* background-color: rgb(46, 168, 243); */
     background-color: var(--secondary-color);
-    /* box-shadow: 0px 4px 8px 2px rgba(46, 168, 243, 0.7); */
     max-height: 650px;
     z-index: 110;
     text-align: center;
     border-radius: 20px;
     padding: 20px;
+    padding-top: 0;
     margin: 20px auto;
+    overflow-y: auto;
 }
 
 #myModal .modal-header {
+    padding-top: 10px;
     color: #fff;
-    height: 40px;
-    position: relative;
+    height: 60px;
+    position: sticky;
+    top: 0;
+    background-color: var(--secondary-color);
+    z-index: 10;
     text-align: left;
 }
 
