--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -37,9 +37,11 @@
                     {% if post.title != "0" %}
                         <div class="post-title mt-1">{{ post.title }}</div>
                     {% endif %}
-                    <div class="post-content">{{ post.content }}
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, aut. Illum exercitationem minus neque consequatur eius expedita libero. Maiores, repudiandae.</p>
+                    {% if post.content %}
+                    <div class="post-content">
+                        {{ post.content }}
                     </div>
+                    {% endif %}
                     <div class="post-actions" data-id="{{ post.id }}" data-owner="{{ post.owner.id }}">
                         <a href="{{ post.get_absolute_url }}" class="social-icon"><i class="far fa-comment clear flex-row" {% if post.num_of_comments %}data-number="{{ post.num_of_comments|format_number }}"{% endif %}></i></a>
                         <a href="#" class="social-icon"><i class="fas fa-retweet clear flex-row"></i></a>
@@ -68,6 +70,6 @@
 
 <!-- Javascript code integration -->
 {% block javascript %}
-    <script src="{% static 'js/UIControl.js' %}" type="module"></script>
+    <script src="{% static 'js/UICtrl.js' %}" type="module"></script>
     <script src="{% static 'js/dataCtrl.js' %}" type="module"></script>
 {% endblock %}
