--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -33,9 +33,9 @@
                     <!-- Only show these buttons if the profile does not belong to the signed in user -->
                     {% if user.user != request.user %}
                         {% if is_followed %}
-                        <a href="#" class="btn btn-login-secondary btn-follow bottom" id="btn-follow">Unfollow</a>
+                        <a href="#" class="btn btn-login-secondary btn-follow bottom" id="main-btn-follow">Unfollow</a>
                         {% else %}
-                        <a href="#" class="btn btn-login-secondary btn-follow bottom" id="btn-follow">Follow</a>
+                        <a href="#" class="btn btn-login-secondary btn-follow bottom" id="main-btn-follow">Follow</a>
                         {% endif %}
                     {% else %}
                     <a href="#" class="btn btn-login-secondary btn-follow bottom" id="myModalBtn">Edit profile</a>
@@ -43,9 +43,14 @@
                 </div>
                 <div class="user-info mt-8 ml-1" data-id="{{ user.id }}">
                     <p class="text-middle clear">{{ user }}</p>
-                    <p class="text-medium">@{{ user.user }}</p>
-                    <!-- <p class="text-medium">{{ user.description }}</p> -->
-                    <p class="text-medium"><i class="far fa-calendar-alt clear"></i> Joined {{ user.created_on|date:"F Y" }}</p>
+                    <p class="text-medium username">@{{ user.user }}</p>
+                    {% if user.description %}<p class="description mb-1">{{ user.description }}</p>{% endif %}
+                    <div class="misc">
+                        <p class="text-medium"><i class="far fa-calendar-alt clear"></i> Joined {{ user.created_on|date:"F Y" }}</p>
+                        {% if user.country %}
+                            <p class="text-medium"><i class="fas fa-map-marker-alt clear"></i> {{ user.country }}</p>
+                        {% endif %}
+                    </div>
                     <a href="#" class="mr-1 following"><strong>{{ user.num_of_following|format_number }}</strong> Following</a>
                     <a href="#" class="mr-1 followers"><strong>{{ user.num_of_followers|format_number }}</strong> Followers</a>
                 </div>
@@ -71,9 +76,11 @@
                         {% if post.title != "0" %}
                             <div class="post-title">{{ post.title }}</div>
                         {% endif %}
-                        <div class="post-content">{{ post.content }}
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, aut. Illum exercitationem minus neque consequatur eius expedita libero. Maiores, repudiandae.</p>
+                        {% if post.content %}
+                        <div class="post-content">
+                            {{ post.content }}
                         </div>
+                        {% endif %}
                         <div class="post-actions" data-id="{{ post.id }}" data-owner="{{ post.owner.id }}">
                             <a href="{{ post.get_absolute_url }}" class="social-icon"><i class="far fa-comment clear flex-row" {% if post.num_of_comments %}data-number="{{ post.num_of_comments|format_number }}"{% endif %}></i></a>
                             <a href="#" class="social-icon"><i class="fas fa-retweet clear flex-row"></i></a>
@@ -129,7 +136,7 @@
 
 <!-- Javascript code integration -->
 {% block javascript %}
-    <script src="{% static 'js/UIControl.js' %}" type="module"></script>
+    <script src="{% static 'js/UICtrl.js' %}" type="module"></script>
     <script src="{% static 'js/modalCtrl.js' %}"></script>
     <script src="{% static 'js/dataCtrl.js' %}" type="module"></script>
 {% endblock %}
