--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -61,7 +61,8 @@
             </div> -->
         {% else %}
             <div class="grid-center mt-1" style="border: 1px solid var(--border-color);">
-                <h3 class="text-middle clear mt-1 mb-1">Share your first tweet with us and start following somebody.</h3>
+                <h3 class="text-middle clear mt-1 mb-1">You have not Tweeted yet.</h3>
+                <p class="clear mt-1 mb-1" style="color:var(--border-color)">When you post a Tweet, it will show up here.</p>
                 <a href="#" class="btn btn-login-secondary btn-inline">Tweet</a>
             </div>
         {% endif %}
