--- a/templates/right_sidebar.html
+++ b/templates/right_sidebar.html
@@ -25,6 +25,9 @@
     {% endfor %}
   </div>
   {% endif %}
+  <div style="width: 75%">
+    {% include "footer.html" %}
+  </div>
 </aside>
 
 <script src="{% static 'js/searchCtrl.js' %}" type="module" defer></script>
