--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -130,6 +130,7 @@
             <!-- COMMENTS page inherits from this template, comments are inserted here -->
             {% block comments %} {% endblock %}
         </div>
+        <div id="loader" class="grid-center mt-1 inactive"><i class="fab fa-twitter fa-2x"></i></div>
     </main>
 {% endblock %}
 
