--- a/templates/right_sidebar.html
+++ b/templates/right_sidebar.html
@@ -24,9 +24,32 @@
       </div>
     {% endfor %}
   </div>
-  {% endif %}
-  <div style="width: 75%">
-    {% include "footer.html" %}
+  <div id="sticky">
+    <div class="card" id="trends">
+      <h3 class="text-middle clear mt-1 ml-1 mb-1">Trends for you</h3>
+        <div class="card-content">
+          <p class="text-lead clear">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="card-content">
+          <p class="text-lead clear">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="card-content">
+          <p class="text-lead clear">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="card-content">
+          <p class="text-lead clear">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="card-content">
+          <p class="text-lead clear">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="card-content">
+          <p class="text-lead clear">Lorem ipsum dolor sit amet.</p>
+        </div>
+    </div>
+    {% endif %}
+    <div style="width: 75%">
+      {% include "footer.html" %}
+    </div>
   </div>
 </aside>
 
