--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -9,7 +9,7 @@
         <p class="text-middle clear mt-1 ml-1">Home</p>
     </div>
     <!-- Form to create new Post/Tweet -->
-    <form method="POST" class="form login-form" id="post-form">
+    <form method="POST" class="form login-form" id="post-form" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="post-container">
             <div class="user-photo"><a href="{{ user.profile_pic.url }}"></a><img src="{{ user.profile_pic.url }}" alt="Not found"></a></div>
@@ -17,6 +17,10 @@
                 <div class="input-field mt-1">
                     <span>{{ form.title.label }}</span>
                     {{form.title}}
+                </div>
+                <div class="input-field mt-1 tweet-image">
+                    <label for="tweet-img"><i class="fas fa-images clear"></i></label>
+                    {{form.tweet_image}}
                 </div>
             </div>
             <div class="clear"></div>
@@ -31,15 +35,14 @@
             <div class="post-container">
                 <div class="user-photo"><a href="{{ post.owner.profile_pic.url }}"></a><img src="{{ post.owner.profile_pic.url }}" alt="Not found"></a></div>
                 <div class="post-card">
-                    <div class="post-title"><a href="{{post.owner.get_absolute_url}}"><strong>{{ post.owner }}</strong></a><span> @{{post.username}} · {{ post.created_on|date:"M j, Y" }}<i class="fas fa-ellipsis-h flex-row"></i></span>
+                    <div class="post-title mt-1"><a href="{{post.owner.get_absolute_url}}"><strong>{{ post.owner }}</strong></a><span> @{{post.username}} · {{ post.created_on|date:"M j, Y" }}<i class="fas fa-ellipsis-h flex-row"></i></span>
                         {% if post.owner.id == user.id %}<a href="{% url 'posts:delete-post' post.id %}" class="delete-post">Delete post ?</a>{% endif %}
                     </div>
                     {% if post.title != "0" %}
                         <div class="post-title mt-1">{{ post.title }}</div>
                     {% endif %}
-                    {% if post.content %}
-                    <div class="post-content">
-                        {{ post.content }}
+                    {% if post.tweet_image %}
+                    <div class="post-content" style="background-image: url({{ post.tweet_image.url }})">
                     </div>
                     {% endif %}
                     <div class="post-actions" data-id="{{ post.id }}" data-owner="{{ post.owner.id }}">
